Serialization compatible - Yes, except:
  - DateTime.Property, DateMidnight.Property and MutableDateTime.Property
   serialization formats have changed to fix a bug.
   Please note that this only affects the property classes, and not DateTime etc.
   It is unlikely that you serialized one of these classes

- Removed time zones Asia/Riyadh87, Asia/Riyadh88 and Asia/Riyadh89.


Deprecations since 1.0
----------------------
None


Bug fixes since 1.0
-------------------
- Date and Time (ZoneInfoCompiler)
  Greek summer time was incorrect due to a comment parsing bug.
  This disabled DST (summer time) for Europe/Athens after 1980.

- DateTimeFormat
  Parsing of two digit year by DateTimeFormat supports parsing of more or less
  than two digits, for compatibility with java.text.SimpleDateFormat. If not
  two digits or if sign character is present, then year is parsed as absolute.

- GJChronology
  Range duration field of dayOfMonth was not consistent with monthOfYear. This
  bug manifested itself when adding/subtracting periods to partials.

- DateTimeParserBucket
  Fixed parsing date where format includes era. Era must be set and rounded
  before any other fields.

- PeriodFormatterBuilder
  Formatters that had fields which required a zero to be printed were not being
  parsed.

- DateTime.Property, DateMidnight.Property and MutableDateTime.Property
  Could previously only be serialized in UTC.
  The serialization format has been changed to be simpler and more reliable.
  Unfortunately, this was an incompatible change to the serialization format.

- DateTimeFormatterBuilder/PeriodFormatterBuilder
  Number parser would accept multiple sign characters as valid.

- YearMonthDay/TimeOfDay.withChronologyRetainFields
  Previously, switching chronology did not validate the fields, so you could
  end up with an object in an invalid state, such as a YearMonthDay where
  dayOfMonth=31 with Coptic.
  This method can now throw an IllegalArgumentException

- Chronologies