@@ -356,4 +356,27 @@ public class TestDateTimeUtils extends TestCase {
         assertEquals(0L, DateTimeUtils.getDurationMillis(null));
     }
 
+    //-----------------------------------------------------------------------
+    public void testIsContiguous_RP() {
+        YearMonthDay ymd = new YearMonthDay(2005, 6, 9);
+        assertEquals(true, DateTimeUtils.isContiguous(ymd));
+        TimeOfDay tod = new TimeOfDay(12, 20, 30, 0);
+        assertEquals(true, DateTimeUtils.isContiguous(tod));
+        Partial year = new Partial(DateTimeFieldType.year(), 2005);
+        assertEquals(true, DateTimeUtils.isContiguous(year));
+        Partial hourOfDay = new Partial(DateTimeFieldType.hourOfDay(), 12);
+        assertEquals(true, DateTimeUtils.isContiguous(hourOfDay));
+        Partial yearHour = year.with(DateTimeFieldType.hourOfDay(), 12);
+        assertEquals(false, DateTimeUtils.isContiguous(yearHour));
+        Partial ymdd = new Partial(ymd).with(DateTimeFieldType.dayOfWeek(), 2);
+        assertEquals(false, DateTimeUtils.isContiguous(ymdd));
+        Partial dd = new Partial(DateTimeFieldType.dayOfMonth(), 13).with(DateTimeFieldType.dayOfWeek(), 5);
+        assertEquals(false, DateTimeUtils.isContiguous(dd));
+        
+        try {
+            DateTimeUtils.isContiguous((ReadablePartial) null);
+            fail();
+        } catch (IllegalArgumentException ex) {}
+    }
+
 }
